frontend/src/app/mappings/generated/MappingsGrammarParser.ts
// Generated from MappingsGrammar.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import MappingsGrammarListener from "./MappingsGrammarListener.js";
import MappingsGrammarVisitor from "./MappingsGrammarVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class MappingsGrammarParser extends Parser {
	public static readonly NULL = 1;
	public static readonly NULLCOALESCING = 2;
	public static readonly ASSIGN = 3;
	public static readonly CONDITIONALASSIGN = 4;
	public static readonly END = 5;
	public static readonly FORMAT = 6;
	public static readonly LENGTH = 7;
	public static readonly COUNT = 8;
	public static readonly BOOL = 9;
	public static readonly POWER = 10;
	public static readonly MULTIPLICATION = 11;
	public static readonly DIVISION = 12;
	public static readonly PLUS = 13;
	public static readonly MINUS = 14;
	public static readonly LPAREN = 15;
	public static readonly RPAREN = 16;
	public static readonly LARRAYPAREN = 17;
	public static readonly RARRAYPAREN = 18;
	public static readonly COLON = 19;
	public static readonly COMMA = 20;
	public static readonly DECIMAL = 21;
	public static readonly UNFINISHED_STRING = 22;
	public static readonly TEXT = 23;
	public static readonly IDENTIFIER = 24;
	public static readonly WS = 25;
	public static readonly ERROR_CHAR = 26;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_exp = 0;
	public static readonly RULE_mapping = 1;
	public static readonly RULE_expression = 2;
	public static readonly RULE_formatExpression = 3;
	public static readonly RULE_nullCoalescing = 4;
	public static readonly RULE_nullCoalescingRightSide = 5;
	public static readonly RULE_roundedNumber = 6;
	public static readonly RULE_number = 7;
	public static readonly RULE_date = 8;
	public static readonly RULE_indexer = 9;
	public static readonly RULE_array = 10;
	public static readonly RULE_arrayElements = 11;
	public static readonly RULE_constant = 12;
	public static readonly RULE_input = 13;
	public static readonly RULE_output = 14;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            "'??'", "':='", 
                                                            "':?='", "';'", 
                                                            null, null, 
                                                            null, null, 
                                                            "'^'", "'*'", 
                                                            "'/'", "'+'", 
                                                            "'-'", "'('", 
                                                            "')'", "'['", 
                                                            "']'", "':'", 
                                                            "','" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "NULL", 
                                                             "NULLCOALESCING", 
                                                             "ASSIGN", "CONDITIONALASSIGN", 
                                                             "END", "FORMAT", 
                                                             "LENGTH", "COUNT", 
                                                             "BOOL", "POWER", 
                                                             "MULTIPLICATION", 
                                                             "DIVISION", 
                                                             "PLUS", "MINUS", 
                                                             "LPAREN", "RPAREN", 
                                                             "LARRAYPAREN", 
                                                             "RARRAYPAREN", 
                                                             "COLON", "COMMA", 
                                                             "DECIMAL", 
                                                             "UNFINISHED_STRING", 
                                                             "TEXT", "IDENTIFIER", 
                                                             "WS", "ERROR_CHAR" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"exp", "mapping", "expression", "formatExpression", "nullCoalescing", 
		"nullCoalescingRightSide", "roundedNumber", "number", "date", "indexer", 
		"array", "arrayElements", "constant", "input", "output",
	];
	public get grammarFileName(): string { return "MappingsGrammar.g4"; }
	public get literalNames(): (string | null)[] { return MappingsGrammarParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return MappingsGrammarParser.symbolicNames; }
	public get ruleNames(): string[] { return MappingsGrammarParser.ruleNames; }
	public get serializedATN(): number[] { return MappingsGrammarParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, MappingsGrammarParser._ATN, MappingsGrammarParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public exp(): ExpContext {
		let localctx: ExpContext = new ExpContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, MappingsGrammarParser.RULE_exp);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 30;
			this.mapping(0);
			this.state = 31;
			this.match(MappingsGrammarParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public mapping(): MappingContext;
	public mapping(_p: number): MappingContext;
	// @RuleVersion(0)
	public mapping(_p?: number): MappingContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: MappingContext = new MappingContext(this, this._ctx, _parentState);
		let _prevctx: MappingContext = localctx;
		let _startState: number = 2;
		this.enterRecursionRule(localctx, 2, MappingsGrammarParser.RULE_mapping, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 46;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				{
				localctx = new BasicMappingContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 34;
				this.output();
				this.state = 35;
				this.match(MappingsGrammarParser.ASSIGN);
				this.state = 36;
				this.expression();
				this.state = 38;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 0, this._ctx) ) {
				case 1:
					{
					this.state = 37;
					this.match(MappingsGrammarParser.END);
					}
					break;
				}
				}
				break;
			case 2:
				{
				localctx = new ConditionalMappingContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 40;
				this.output();
				this.state = 41;
				this.match(MappingsGrammarParser.CONDITIONALASSIGN);
				this.state = 42;
				this.input();
				this.state = 44;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
				case 1:
					{
					this.state = 43;
					this.match(MappingsGrammarParser.END);
					}
					break;
				}
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 53;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new ManyMappingsContext(this, new MappingContext(this, _parentctx, _parentState));
					this.pushNewRecursionContext(localctx, _startState, MappingsGrammarParser.RULE_mapping);
					this.state = 48;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 49;
					this.match(MappingsGrammarParser.END);
					this.state = 50;
					this.mapping(2);
					}
					}
				}
				this.state = 55;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, MappingsGrammarParser.RULE_expression);
		try {
			this.state = 65;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 56;
				this.constant();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 57;
				this.input();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 58;
				this.nullCoalescing();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 59;
				this.indexer();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 60;
				this.array();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 61;
				this.roundedNumber();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 62;
				this.date();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 63;
				this.formatExpression();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 64;
				this.match(MappingsGrammarParser.NULL);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public formatExpression(): FormatExpressionContext {
		let localctx: FormatExpressionContext = new FormatExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, MappingsGrammarParser.RULE_formatExpression);
		try {
			this.state = 81;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				localctx = new FormatExpressionVarDateFormatContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 67;
				this.match(MappingsGrammarParser.FORMAT);
				this.state = 68;
				this.match(MappingsGrammarParser.LPAREN);
				this.state = 69;
				(localctx as FormatExpressionVarDateFormatContext)._value = this.input();
				this.state = 70;
				this.match(MappingsGrammarParser.COMMA);
				this.state = 71;
				(localctx as FormatExpressionVarDateFormatContext)._dateFormat = this.input();
				this.state = 72;
				this.match(MappingsGrammarParser.RPAREN);
				}
				break;
			case 2:
				localctx = new FormatExpressionConstDateFormatContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 74;
				this.match(MappingsGrammarParser.FORMAT);
				this.state = 75;
				this.match(MappingsGrammarParser.LPAREN);
				this.state = 76;
				(localctx as FormatExpressionConstDateFormatContext)._value = this.input();
				this.state = 77;
				this.match(MappingsGrammarParser.COMMA);
				this.state = 78;
				(localctx as FormatExpressionConstDateFormatContext)._dateFormat = this.match(MappingsGrammarParser.TEXT);
				this.state = 79;
				this.match(MappingsGrammarParser.RPAREN);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public nullCoalescing(): NullCoalescingContext {
		let localctx: NullCoalescingContext = new NullCoalescingContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, MappingsGrammarParser.RULE_nullCoalescing);
		try {
			let _alt: number;
			this.state = 93;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 24:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 83;
				this.input();
				this.state = 85;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 84;
						this.nullCoalescingRightSide();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 87;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				}
				break;
			case 15:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 89;
				this.match(MappingsGrammarParser.LPAREN);
				this.state = 90;
				this.nullCoalescing();
				this.state = 91;
				this.match(MappingsGrammarParser.RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public nullCoalescingRightSide(): NullCoalescingRightSideContext {
		let localctx: NullCoalescingRightSideContext = new NullCoalescingRightSideContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, MappingsGrammarParser.RULE_nullCoalescingRightSide);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 95;
			this.match(MappingsGrammarParser.NULLCOALESCING);
			this.state = 99;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 24:
				{
				this.state = 96;
				this.input();
				}
				break;
			case 9:
			case 14:
			case 21:
			case 23:
				{
				this.state = 97;
				this.constant();
				}
				break;
			case 1:
				{
				this.state = 98;
				this.match(MappingsGrammarParser.NULL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public roundedNumber(): RoundedNumberContext {
		let localctx: RoundedNumberContext = new RoundedNumberContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, MappingsGrammarParser.RULE_roundedNumber);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 101;
			this.number_(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public number_(): NumberContext;
	public number_(_p: number): NumberContext;
	// @RuleVersion(0)
	public number_(_p?: number): NumberContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: NumberContext = new NumberContext(this, this._ctx, _parentState);
		let _prevctx: NumberContext = localctx;
		let _startState: number = 14;
		this.enterRecursionRule(localctx, 14, MappingsGrammarParser.RULE_number, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 126;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				localctx = new ParensxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 104;
				this.match(MappingsGrammarParser.LPAREN);
				this.state = 105;
				this.number_(0);
				this.state = 106;
				this.match(MappingsGrammarParser.RPAREN);
				}
				break;
			case 2:
				{
				localctx = new NegationxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 108;
				this.match(MappingsGrammarParser.MINUS);
				this.state = 109;
				this.number_(8);
				}
				break;
			case 3:
				{
				localctx = new MathNullCoalescingxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 110;
				this.nullCoalescing();
				}
				break;
			case 4:
				{
				localctx = new DecimalxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 111;
				this.match(MappingsGrammarParser.DECIMAL);
				}
				break;
			case 5:
				{
				localctx = new MathIdentifierxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 112;
				this.input();
				}
				break;
			case 6:
				{
				localctx = new LengthxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 113;
				this.match(MappingsGrammarParser.LENGTH);
				this.state = 114;
				this.match(MappingsGrammarParser.LPAREN);
				this.state = 115;
				this.input();
				this.state = 116;
				this.match(MappingsGrammarParser.RPAREN);
				}
				break;
			case 7:
				{
				localctx = new CountxContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 118;
				this.match(MappingsGrammarParser.COUNT);
				this.state = 119;
				this.match(MappingsGrammarParser.LPAREN);
				this.state = 122;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 17:
					{
					this.state = 120;
					this.array();
					}
					break;
				case 24:
					{
					this.state = 121;
					this.input();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 124;
				this.match(MappingsGrammarParser.RPAREN);
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 139;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 137;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
					case 1:
						{
						localctx = new PowerxContext(this, new NumberContext(this, _parentctx, _parentState));
						(localctx as PowerxContext)._a = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, MappingsGrammarParser.RULE_number);
						this.state = 128;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 129;
						this.match(MappingsGrammarParser.POWER);
						this.state = 130;
						(localctx as PowerxContext)._b = this.number_(10);
						}
						break;
					case 2:
						{
						localctx = new MultiplicationxContext(this, new NumberContext(this, _parentctx, _parentState));
						(localctx as MultiplicationxContext)._a = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, MappingsGrammarParser.RULE_number);
						this.state = 131;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 132;
						(localctx as MultiplicationxContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===11 || _la===12)) {
						    (localctx as MultiplicationxContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 133;
						(localctx as MultiplicationxContext)._b = this.number_(8);
						}
						break;
					case 3:
						{
						localctx = new AdditionxContext(this, new NumberContext(this, _parentctx, _parentState));
						(localctx as AdditionxContext)._a = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, MappingsGrammarParser.RULE_number);
						this.state = 134;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 135;
						(localctx as AdditionxContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===13 || _la===14)) {
						    (localctx as AdditionxContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 136;
						(localctx as AdditionxContext)._b = this.number_(7);
						}
						break;
					}
					}
				}
				this.state = 141;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public date(): DateContext {
		let localctx: DateContext = new DateContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, MappingsGrammarParser.RULE_date);
		try {
			this.state = 145;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				localctx = new DateNullCoalescingxContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 142;
				this.nullCoalescing();
				}
				break;
			case 2:
				localctx = new DateTextxContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 143;
				this.match(MappingsGrammarParser.TEXT);
				}
				break;
			case 3:
				localctx = new DateIdentifierxContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 144;
				this.input();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public indexer(): IndexerContext {
		let localctx: IndexerContext = new IndexerContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, MappingsGrammarParser.RULE_indexer);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 149;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 17:
				{
				this.state = 147;
				this.array();
				}
				break;
			case 24:
				{
				this.state = 148;
				this.input();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 151;
			this.match(MappingsGrammarParser.LARRAYPAREN);
			this.state = 152;
			localctx._index = this.number_(0);
			this.state = 153;
			this.match(MappingsGrammarParser.RARRAYPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public array(): ArrayContext {
		let localctx: ArrayContext = new ArrayContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, MappingsGrammarParser.RULE_array);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 155;
			this.match(MappingsGrammarParser.LARRAYPAREN);
			this.state = 157;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 27444162) !== 0)) {
				{
				this.state = 156;
				this.arrayElements();
				}
			}

			this.state = 159;
			this.match(MappingsGrammarParser.RARRAYPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arrayElements(): ArrayElementsContext {
		let localctx: ArrayElementsContext = new ArrayElementsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, MappingsGrammarParser.RULE_arrayElements);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 161;
			this.expression();
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===20) {
				{
				{
				this.state = 162;
				this.match(MappingsGrammarParser.COMMA);
				this.state = 163;
				this.expression();
				}
				}
				this.state = 168;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public constant(): ConstantContext {
		let localctx: ConstantContext = new ConstantContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, MappingsGrammarParser.RULE_constant);
		try {
			this.state = 174;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 21:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 169;
				this.match(MappingsGrammarParser.DECIMAL);
				}
				break;
			case 14:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 170;
				this.match(MappingsGrammarParser.MINUS);
				this.state = 171;
				this.match(MappingsGrammarParser.DECIMAL);
				}
				break;
			case 23:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 172;
				this.match(MappingsGrammarParser.TEXT);
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 173;
				this.match(MappingsGrammarParser.BOOL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public input(): InputContext {
		let localctx: InputContext = new InputContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, MappingsGrammarParser.RULE_input);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 176;
			this.match(MappingsGrammarParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public output(): OutputContext {
		let localctx: OutputContext = new OutputContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, MappingsGrammarParser.RULE_output);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 178;
			this.match(MappingsGrammarParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public sempred(localctx: RuleContext, ruleIndex: number, predIndex: number): boolean {
		switch (ruleIndex) {
		case 1:
			return this.mapping_sempred(localctx as MappingContext, predIndex);
		case 7:
			return this.number_sempred(localctx as NumberContext, predIndex);
		}
		return true;
	}
	private mapping_sempred(localctx: MappingContext, predIndex: number): boolean {
		switch (predIndex) {
		case 0:
			return this.precpred(this._ctx, 1);
		}
		return true;
	}
	private number_sempred(localctx: NumberContext, predIndex: number): boolean {
		switch (predIndex) {
		case 1:
			return this.precpred(this._ctx, 9);
		case 2:
			return this.precpred(this._ctx, 7);
		case 3:
			return this.precpred(this._ctx, 6);
		}
		return true;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!MappingsGrammarParser.__ATN) {
			MappingsGrammarParser.__ATN = new ATNDeserializer().deserialize(MappingsGrammarParser._serializedATN);
		}

		return MappingsGrammarParser.__ATN;
	}

